Fix gvr scene broken for some reason

--- a/Assets/Morph/application.json
+++ b/Assets/Morph/application.json
@@ -1,1 +1,1 @@
-{"Name":"Oculus Go - Gear VR","Scene":"Morph/Scenes/MorphOculusApplication","Dependencies":["Oculus"]}
+{"Name":"Desktop","Scene":"Morph/Scenes/MorphDefaultApplication","Dependencies":[]}
