--- a/Assets/Morph/application.json
+++ b/Assets/Morph/application.json
@@ -1,1 +1,1 @@
-{"Name":"Desktop","Scene":"Morph/Scenes/MorphDefaultApplication","Dependencies":[]}
+{"Name":"Google VR","Scene":"Morph/Scenes/MorphGVRApplication","Dependencies":["GoogleVR"]}
