Split Oculus asmdef into several asmdef

--- a/Assets/Oculus/AudioManager/Scripts/Oculus.AudioManager.asmdef
+++ b/Assets/Oculus/AudioManager/Scripts/Oculus.AudioManager.asmdef
@@ -1,8 +1,7 @@
 {
-    "name": "Morph.Oculus",
+    "name": "Oculus.AudioManager",
     "references": [
-        "Morph",
-        "Oculus.VR"
+        "Oculus.Spatializer"
     ],
     "includePlatforms": [],
     "excludePlatforms": []
